--- a/Angular/20200609/NestedNGuards/angular.json
+++ b/Angular/20200609/NestedNGuards/angular.json
@@ -124,6 +124,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "NestedNGuards"
+    }
+  },
+  "defaultProject": "NestedNGuards",
+  "cli": {
+    "analytics": false
+  }
 }
