Added basic LinqToXml

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@
 /C#/20200825/RegExExample/.vs/RegExExample/v16
 /C#/20200825/RegExExample/RegExExample/bin/Debug/netcoreapp3.1
 /C#/20200825/RegExExample/RegExExample/obj
+/C#/20200819/XMLExample/.vs/XMLExample/v16
+/C#/20200819/XMLExample/XMLExample/bin/Debug/netcoreapp3.1
+/C#/20200819/XMLExample/XMLExample/obj
