--- a/Angular/20200717/AngularMaterialCrud/angular.json
+++ b/Angular/20200717/AngularMaterialCrud/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "AngularMaterialCrud"
+  "defaultProject": "AngularMaterialCrud",
+  "cli": {
+    "analytics": false
+  }
 }
