--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /C#/20200901/LiskovExample/.vs/LiskovExample/v16
 /C#/20200901/LiskovExample/LiskovExample/obj
 /C#/20200901/LiskovExample/LiskovExample/bin/Debug/netcoreapp3.1
+C#/20200901/LiskovExample/.vs/LiskovExample/DesignTimeBuild/.dtbcache.v2
